fix: refactor fonts for emoji to be spaced correctly on safari, even though they don't use the correct font-family

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1831,11 +1831,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   --color-bg-dark-alt2: #1c1917;
   --color-bg-dark-alt3: #18181b;
   --color-bg-light-print: white;
-  --core-font-emoji: "Noto Emoji";
-  --core-font-brush: var(--core-font-emoji), "Caveat Brush", sans-serif;
+  --core-font-emoji: "Noto Emoji", system-ui;
+  --core-font-brush: "Caveat Brush", sans-serif, var(--core-font-emoji);
   --core-font-mono: "Recursive", "Monaco", "Inconsolata", monospace;
   --core-font-body: var(--core-font-mono), sans-serif;
-  --core-font-scribble: var(--core-font-emoji), 'Nanum Pen Script', Courier, serif;
+  --core-font-scribble: "Nanum Pen Script", "Courier", serif;
   --recursive-mono: "MONO" 0.5;
   --recursive-casl: "CASL" 0.5;
   --recursive-wght: "wght" 350;
